--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "apollo-server-micro": "^2.19.1",
+    "axios": "^0.21.1",
+    "fuse.js": "^6.4.6",
+    "graphql": "^15.4.0",
     "next": "10.0.5",
+    "next-pwa": "^5.0.3",
+    "ramda": "^0.27.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.4.0"
   }
 }
