--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "ramda": "^0.27.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "swr": "^0.4.0"
+    "react-firebaseui": "^4.1.0",
+    "swr": "^0.4.0",
+    "firebase": "^7.15.5",
+    "firebase-admin": "^8.12.1",
+    "js-cookie": "2.2.1"
   }
 }
